# Syntra

./: app.py  dummy.py  main.py  pyproject.toml  requirements.txt
src/: constants.py  document_embeddings.py  helper.py
src/document_loaders/: document_loader.py
src/graphs/: graph_builder.py
src/llms/: groq_llm.py
src/nodes/: basic_chatbot_node.py
src/retrievers/: vectore_store.py
src/states/: state.py
src/ui/: streamlit_ui.py
