[project]
name = "syntra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.13",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.13",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.1",
    "uvicorn>=0.34.3",
    "watchdog>=6.0.0",
]
